...
                }
                .onFocusChanged {
                    if (it.isFocused && localQuery.isNotBlank()) {
                        expanded = true
                    }
                }
                .testTag("searchField")
                .border(
                    width = 1.dp,
                    color = Color.Gray,
                    shape = RoundedCornerShape(12.dp)
                )
                .padding(2.dp)
...
        )
        {
            Card(
                modifier = Modifier
                    .width(textFieldSize.width.dp)
                    .padding(horizontal = 5.dp)
                    .testTag("suggestionsCard"),
                elevation = CardDefaults.cardElevation(15.dp),
            ) {
                LazyColumn(
                    modifier = Modifier.heightIn(max = 200.dp)
                ) {
                    val (locations, clubNames) = suggestions
...
